# kms-vulkan

./: LICENSE  README.md  buffer.c  device.c  edid.c  egl-gles.c  input.c  kms-quads.h  kms-skeleton.h  kms.c  logind.c  main.c  meson.build  meson_options.txt  timespec-util.h  vulkan.c  vulkan.frag  vulkan.vert
.cache/clangd/index/: buffer.c.B0970AEE9515A949.idx  device.c.4EA1DA1819F41777.idx  edid.c.24346E41DAD2E2CE.idx  egl-gles.c.E5512194345A80E1.idx  input.c.98BB79BAE40D5BF1.idx  kms-quads.h.0DD15F3C9DCFD412.idx  kms.c.6567932E9FBD0C6D.idx  logind.c.41D1AD3A69C0A2B7.idx  main.c.0442EC1506406EF5.idx  timespec-util.h.FBA132F1273FB5F2.idx  vulkan.c.014BB458D67957C1.idx
